Bug #43528: make sure that shadow of app tiles is not cut off
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-4.2-0@78174 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-web/css/site/appGallery.styl
+++ b/management/univention-web/css/site/appGallery.styl
@@ -9,6 +9,7 @@
 	&.dgrid
 		border: none
 		height: auto
+		overflow: visible
 
 		.dgrid-scroller
 			position: relative
